--- a/3'rd SEMESTER/APM (Advanced programming methods)/A2/Java_Interpreter_GUI/src/resources/gui/ProgramExecutorController.fxml
+++ b/3'rd SEMESTER/APM (Advanced programming methods)/A2/Java_Interpreter_GUI/src/resources/gui/ProgramExecutorController.fxml
@@ -9,7 +9,7 @@
     <children>
         <VBox alignment="TOP_CENTER" style="-fx-background-color: #000027;">
             <children>
-                <Label alignment="CENTER" lineSpacing="1.0" text="~Number of program states~" textAlignment="CENTER" textFill="#E3DDE2">
+                <Label alignment="CENTER" lineSpacing="1.0" text="~Number of program states~" textAlignment="CENTER" textFill="#000000">
                     <font>
                         <Font name="Berlin Sans FB" size="14.0" />
                     </font></Label>
@@ -29,7 +29,7 @@
                                         <Font name="Berlin Sans FB" size="12.0" />
                                     </font>
                                 </Label>
-                                <TableView fx:id="heapTableView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #CCFBFE; -fx-background-radius: 5px;">
+                                <TableView fx:id="heapTableView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000; -fx-background-radius: 5px;">
                                     <columns>
                                         <TableColumn fx:id="addressColumn" editable="false" prefWidth="101.20001375675201" text="Address" />
                                         <TableColumn fx:id="valueColumn" editable="false" prefWidth="97.99999237060547" text="Value" />
@@ -47,7 +47,7 @@
                                         <Font name="Berlin Sans FB" size="12.0" />
                                     </font>
                                 </Label>
-                                <ListView fx:id="outputListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #CCFBFE; -fx-background-radius: 5px;" />
+                                <ListView fx:id="outputListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000; -fx-background-radius: 5px;" />
                             </children>
                         </VBox>
                         <VBox alignment="TOP_CENTER">
@@ -57,7 +57,7 @@
                                         <Font name="Berlin Sans FB" size="12.0" />
                                     </font>
                                 </Label>
-                                <ListView fx:id="fileTableListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #CCFBFE; -fx-background-radius: 5px;">
+                                <ListView fx:id="fileTableListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000; -fx-background-radius: 5px;">
                                     <VBox.margin>
                                         <Insets />
                                     </VBox.margin></ListView>
@@ -77,7 +77,7 @@
                                         <Font name="Berlin Sans FB" size="12.0" />
                                     </font>
                                 </Label>
-                                <ListView fx:id="programStateIdentifiersListView" onMouseClicked="#changeProgramState" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #CCFBFE; -fx-background-radius: 5px;" />
+                                <ListView fx:id="programStateIdentifiersListView" onMouseClicked="#changeProgramState" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000; -fx-background-radius: 5px;" />
                             </children>
                             <HBox.margin>
                                 <Insets />
@@ -90,7 +90,7 @@
                                         <Font name="Berlin Sans FB" size="12.0" />
                                     </font>
                                 </Label>
-                                <TableView fx:id="symbolTableView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #CCFBFE; -fx-background-radius: 5px;">
+                                <TableView fx:id="symbolTableView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000; -fx-background-radius: 5px;">
                                     <columns>
                                         <TableColumn fx:id="variableNameColumn" editable="false" prefWidth="99.20001524686813" text="Variable Name" />
                                         <TableColumn fx:id="variableValueColumn" editable="false" prefWidth="100.0" text="Value" />
@@ -111,7 +111,7 @@
                                         <Font name="Berlin Sans FB" size="12.0" />
                                     </font>
                                 </Label>
-                                <ListView fx:id="executionStackListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #CCFBFE; -fx-background-radius: 5px;" />
+                                <ListView fx:id="executionStackListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000; -fx-background-radius: 5px;" />
                             </children>
                             <HBox.margin>
                                 <Insets />
